main:fix the readability issues in the experiance
   - fix the color code and readability issues in experiance
     column to improve ux performance

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -75,7 +75,7 @@
       .caption {
         margin-top: 0.5em; 
         font-size: 0.9em;
-        color: #666;
+        color: #fff;
       }
 
       .mentors {
